[gd_scene load_steps=9 format=2]

[ext_resource path="res://Font/Mario-Kart-DS.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Prototype/Scripts/BestScores.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[node name="BestScores" type="MarginContainer"]
margin_left = 11.0
margin_right = 128.0
margin_bottom = 47.0
size_flags_horizontal = 5
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HBoxContainer" parent="."]
margin_right = 117.0
margin_bottom = 47.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 36.0
margin_bottom = 47.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer"]
margin_right = 36.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "DEF"
align = 1
valign = 1

[node name="Label2" type="Label" parent="HSplitContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 36.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "DEF"
align = 1
valign = 1

[node name="Label3" type="Label" parent="HSplitContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 36.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 3 )
text = "DEF"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer"]
margin_left = 40.0
margin_right = 76.0
margin_bottom = 47.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="HSplitContainer/MarginContainer"]
margin_right = 36.0
margin_bottom = 47.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HSplitContainer"]
margin_left = 80.0
margin_right = 117.0
margin_bottom = 47.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer2"]
margin_right = 37.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Label2" type="Label" parent="HSplitContainer/VBoxContainer2"]
margin_top = 17.0
margin_right = 37.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Label3" type="Label" parent="HSplitContainer/VBoxContainer2"]
margin_top = 34.0
margin_right = 37.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
valign = 1
